# Medic-LLM

./: LICENSE  PRD.md  README.md  gradio_app.py  pyproject.toml
app/: api.py  fhir_parser.py  inference.py  rag.py  schemas.py
app/static/: index.html
data/: patient_001.json  patient_002.json  patient_003.json  patient_004.json  patient_005.json
data/medical_docs/: asthma_control.txt  diabetes_guidelines.txt  heart_failure_treatment.txt  hypertension_management.txt
notebooks/: medic-llm.ipynb
tests/: test_api.py  test_fhir_parser.py
training/: config.py  dataset.py  evaluate.py  train.py
