[project]
name = "medic-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "gradio>=6.19.0",
    "peft>=0.19.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "trl>=1.6.0",
    "uvicorn>=0.49.0",
    "wandb>=0.28.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
]
